Updated the Gradle wrapper.